--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,9 @@ html {
 }
 
 body {
-  background-color: var(--bg-primary);
+  /* background-color: var(--bg-primary);
   background-image: var(--bg-image);
   background-attachment: fixed;
+    */ background-color: #101016;
+      background-image: repeating-radial-gradient(circle at 0 0, transparent 0, #1f1f38 12px), repeating-linear-gradient(#6971ff5d, #164b9b76);
 }
